.argocd-state/paczka/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paczka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paczka
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: paczka
    spec:
      containers:
        - name: paczka
          image: gtstef/filebrowser:2.0.0-stable
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 30m
              memory: 300Mi
            limits:
              memory: 600Mi
          readinessProbe:
            httpGet:
              path: /health
              port: http
          volumeMounts:
            - name: paczka
              mountPath: /paczka
            - name: config
              mountPath: /home/filebrowser/config.yaml
              subPath: config.yaml
      volumes:
        - name: paczka
          persistentVolumeClaim:
            claimName: paczka-pvc
        - name: config
          configMap:
            name: paczka-config
        - name: nginx-snippets
          configMap:
            name: paczka-nginx-snippets
